welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: type mismatch;
 found   : Unit
 required: Boolean
while (finir=false) {
            ^BDR2:3: error: not found: value lettre
lettre match {
^